--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p>
       You can follow me on
       <a href="https://twitter.com/conradocanas">Twitter</a> to check on my daily
-      life and and <a href="https://www.linkedin.com/in/conradocanas/">LinkedIn</a> if you
+      life or <a href="https://www.linkedin.com/in/conradocanas/">LinkedIn</a> if you
       want to make a working-related proposal. My personal <a href="https://cv.conrado.ar">Curriculum</a> is open source and free to clone and use.
     </p>
 </body>
